# enterprise-agentic-ai-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  full_logs.txt  pyproject.toml  test_streaming.py
frontend/: package-lock.json
frontend/src/: AgentActivity.jsx  App.jsx  AuditLog.jsx  Chat.jsx  EvalResults.jsx  api.js
k8s/: deployment.yaml  service.yaml
src/agents/: it_support_agent.py  knowledge_agent.py  mcp_agent_runner.py  streaming_runner.py
src/api/: main.py
src/common/: config.py  logging.py
src/evaluation/: dataset.py  judge.py  run_evals.py
src/governance/: audit.py  guardrails.py  pii.py
src/graphrag/: loader.py  retriever.py
src/mcp_servers/: it_support_server.py  knowledge_server.py
src/orchestration/: supervisor.py
