[project]
name = "enterprise-agentic-platform"
version = "0.1.0"
description = "Enterprise Agentic AI Platform: MCP, GraphRAG, Multi-Agent Orchestration, Governance, Evals, K8s"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
graphrag = [
    "neo4j>=5.26.0",
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]